# hummingbird-in-hise

./: .gitignore  project_info.xml  pyproject.toml  user_info.xml
SampleMaps/: BrPN.xml  BrPND Full.xml  BrPND Lower.xml  BrPND Upper.xml  BrPNU Full.xml  BrPNU Lower.xml  BrPNU Upper.xml  ExtraNoise.xml  Generic.xml
SampleMaps/Single/String1/: Body.xml  FnD.xml  FnU.xml  Frn.xml  MuteD.xml  MuteU.xml  Noises.xml  PkbzD.xml  PkbzU.xml  PknD.xml  PknU.xml  Pstop.xml  SustD.xml  SustU.xml  Transitions.xml  Vibrato.xml  nHarm.xml
SampleMaps/Single/String2/: Body.xml  FnD.xml  FnU.xml  Frn.xml  MuteD.xml  MuteU.xml  Noises.xml  PkbzD.xml  PkbzU.xml  PknD.xml  PknU.xml  Pstop.xml  SustD.xml  SustU.xml  Transitions.xml  Vibrato.xml  (+1 more)
Scripts/Configurations/: CCs.json
Scripts/Interface/: GuitarFretboard.js  GuitarStringText.js  Interface.js
Scripts/Namespaces/: Articulations.js  CCs.js  Delays.js  EventChaser.js  ExtraNoise.js  GlobalModulations.js  GuitarString.js  Humanizer.js  Internal.js  Keys.js  LeftHand.js  MIDI.js  MIDIControls.js  Noises.js  NoteChaser.js  NoteTrigger.js  PlayExtraNoise.js  PlayNoise.js  PlayNote.js  RR.js  RightHand.js  String.js  Strokes.js  Strum.js  StrumNoise.js  Transport.js  Velocity.js
Scripts/Objects/: Debug.js  Delays.js  GuitarString.js  GuitarStrings.js  LH.js  MIDI.js  Noises.js  RH.js  RR.js
Scripts/Settings/: Noises.js  cc.js  keys.js  rr.js  settings.js  velocity.js
Tools/samplemapping/: __init__.py  parser.py
UserPresets/: cc.json  keys.json  rr.json  settings.json  velocity.json
XmlPresetBackups/: Hummingbird.xml
(+73 files in other folders)
