[tool.poetry]
name = "hummingbird"
version = "0.1.0"
description = "An acoustic guitar sample library developed with HiSE"
authors = ["RCJacH"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
