[tool.poetry]
name = "hummingbird"
version = "0.1.0"
description = "An acoustic guitar sample library developed with HiSE"
authors = ["RCJacH"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
isort = "^5.10.1"
flake8-pytest = "^1.3"
flake8-pytest-style = "^1.6.0"
autopep8 = "^1.6.0"
mido = "^1.2.10"
bottle = "^0.12.19"
ipykernel = "^6.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
